--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ iplookup
 git+https://github.com/Starkgangs/pydl.git
 pytesseract
 aiofiles
+aiohttp
+aria2p
 pyshorteners
 aiohttp
 async_generator
@@ -22,6 +24,7 @@ gTTS-token>=1.1.3
 gTTS>=2.0.1
 geopy
 gitpython
+glitch_this
 google-api-python-client==1.8.0
 google-auth-oauthlib
 google_images_download>=2.7.1
@@ -31,9 +34,12 @@ hachoir
 heroku3
 httplib2
 humanize
+jikanpy
 lxml
 lyricsgenius
 oauth2client
+pendulum
+Pillow
 psycopg2-binary
 PyLyrics
 PyPDF2
