--- a/app.json
+++ b/app.json
@@ -78,6 +78,14 @@
       "description": "The Value of App Name you filled in right on top.Required for updater to work.",
       "value": ""
     },
+    "SPOTIFY_USERNAME": {
+            "description": "Spotify Current Listening Music to Bio.",
+            "required": false
+        },
+        "SPOTIFY_PASS": {
+            "description": "Spotify Current Listening Music to Bio.",
+            "required": false
+        },
     "TG_BOT_TOKEN_BF_HER": {
       "description": "Needed for inline buttons maker. Make a bot at @BotFather and get the token of your bot. Get it.",
       "value": ""
